fix horizontal scroll on 320px

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,4 +2,5 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  border: 1px solid red;
 }
